[gd_scene load_steps=12 format=2]

[ext_resource path="res://Asset/kotak.png" type="Texture" id=1]
[ext_resource path="res://Sprite.gd" type="Script" id=2]
[ext_resource path="res://PopUp_Pintu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asset/cat3d.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.5, 20 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 1080, 666 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 1080, 666 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 666, 1080, 666 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1332, 1080, 666 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
} ]

[node name="CharacterPlayer" type="KinematicBody2D" groups=["Player"]]
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9.5, 0 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.5, 0 )
shape = SubResource( 2 )

[node name="PopUp_Pintu" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
margin_left = -96.0
margin_top = -112.0
margin_right = 88.0
margin_bottom = -48.0

[node name="Label" type="Label" parent="."]
margin_left = -32.0
margin_top = -56.0
margin_right = 32.0
margin_bottom = -42.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.0851852, 0.102102 )
frames = SubResource( 7 )
animation = "Move"
frame = 2

[connection signal="area_entered" from="Area2D" to="." method="_pintu_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_pintu_area_exited"]
